# dinosaur

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: consts.rs  lib.rs
