[package]
name = "dinosaur"
version = "0.2.0"
edition = "2021"

[lib]
name = "umpdc"
crate-type = ["cdylib"]

[dependencies]
betrayer = { version = "0.2.0", git = "https://github.com/sidit77/betrayer.git", rev = "0ed99415dc36cd613026dbd5892021c271e52aa3", features = ["winit"] }
png = "0.17.14"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_SystemServices"] }
winit = { version = "0.30.5", default-features = false }
winsafe = { version = "0.0.22", features = ["kernel", "user", "shell"] }
